# TermWikiTools

./: README.md  pyproject.toml  setup.py
termwikiimporter/: __init__.py  _version.py  analyser.py  bot.py  check_tw_expressions.py  contlex_n_stem.py  dicts2wiki.py  dump2xml.py  dupechecker.py  dupes-fi-A.txt  dupes-fi-Adp.txt  dupes-fi-Adv.txt  dupes-fi-CS.txt  dupes-fi-Cc.txt  dupes-fi-Interj.txt  dupes-fi-V.txt  dupes-nb-A.txt  dupes-nb-Adv.txt  dupes-nb-CS.txt  dupes-nb-Cc.txt  dupes-nb-Interj.txt  dupes-nb-N.txt  dupes-nb-V.txt  dupes-se-A.txt  dupes-se-Adp.txt  dupes-se-Adv.txt  dupes-se-CS.txt  dupes-se-Interj.txt  dupes-se-N.txt  dupes-se-V.txt  dupes-sma-A.txt  dupes-sma-Adp.txt  dupes-sma-Adv.txt  dupes-sma-Interj.txt  dupes-sma-N.txt  dupes-sma-Pcle.txt  dupes-smj-A.txt  dupes-smj-Adp.txt  dupes-smj-Adv.txt  dupes-smj-N.txt  (+17 more)
termwikiimporter/test/: TestImporter.py  test_bot.py  test_dicts2wiki.py  test_importer.py  test_read_termwiki.py
termwikiimporter/test/excel/: simple.xlsx  simple.yaml
termwikiimporter/test/terms/: termcenter.xml  terms-fi.xml  terms-nb.xml  terms-se.xml
termwikitools/: __init__.py  analyse_logs.py  bot.py  check_tw_expressions.py  contlex_n_stem.py  dump2xml.py  dumphandler.py  exporter.py  find_stems.py  handler_common.py  importer.py  lookup.py  mover.py  read_termwiki.py  satni.py  searcher.py  sitehandler.py  terms2graphql.py
termwikitools/test/: test_dicts2wiki.py  test_importer.py  test_read_termwiki.py
termwikitools/test/excel/: simple.yaml
termwikitools/test/terms/: termcenter.xml  terms-fi.xml  terms-se.xml
