[tool.poetry]
name = "TermWikiTools"
version = "0.0.2"
description = "Manipulate TermWiki data"
authors = ["Børre Gaup <albbas@gmail.com>"]
license = "GPLv3+"
homepage = "https://github.com/divvun/TermWikiTools"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^21.2.0"
lxml = "^4.6.3"
mwclient = "^0.10.1"
openpyxl = "^3.0.7"
pyyaml = "^6.0.1"
unidecode = "^1.2.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"

[tool.poetry.scripts]
termimport = "termwikitools.importer:main"
termexport = "termwikitools.exporter:write_to_termwiki"
termbot = "termwikitools.bot:main"
termmover = "termwikitools.mover:main"
dictexport = "termwikitools.dicts2wiki:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"