[tool.poetry]
name = "TermWikiTools"
version = "0.3.0"
description = "Manipulate TermWiki data"
authors = ["Børre Gaup <albbas@gmail.com>"]
license = "GPLv3+"
homepage = "https://github.com/divvun/TermWikiTools"

[tool.poetry.dependencies]
python = "^3.10"
mwclient = "^0.10.1"
openpyxl = "^3.0.7"
requests = "^2.25.1"
click = "^8.1.7"
marshmallow-dataclass = "^8.6.0"
hfst = "^3.16.0.1"
pyyaml = "^6.0.1"
setuptools = "^69.0.2"
lxml = "^5.1.0"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"

[tool.poetry.scripts]
termimport = "termwikitools.importer:main"
termexport = "termwikitools.exporter:write_to_termwiki"
termbot = "termwikitools.bot:main"
termmover = "termwikitools.mover:main"
termsearcher = "termwikitools.searcher:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
types-lxml = "^2024.2.9"
types-pyyaml = "^6.0.12.12"
types-openpyxl = "^3.1.0.20240205"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "F", #Pyflakes
    "B", #flake8-bugbear
    "A", #flake8-builtins 
    "C4", #flake8-comprehensions
    "ERA", #eradicate
    "I", #isort
    "PT", #flake8-pytest-style
    "C90", #mccabe
    "N", #pep8-naming
    "E", #pycodestyle error
    "PL" #Pylint
]
ignore = ["A003"]
